// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultComponent /> should render with custom props 1`] = `
Object {
  "children": Array [],
  "classNames": Object {
    "container": "custom-container-class",
  },
  "data": Object {
    "items": Array [
      Object {
        "metadata": Object {
          "img": "https://api.marvel.com/v2/characters/tony-stark",
          "name": "Tony Stark",
        },
      },
      Object {
        "metadata": Object {
          "img": "https://api.marvel.com/v2/characters/peter-parker",
          "name": "Peter Parker",
        },
      },
    ],
    "query": Object {
      "q": "Marvel",
    },
  },
  "exclude": Array [],
  "formatData": [Function],
  "highlightsEnabled": true,
  "itemsPerPage": 20,
  "promote": Array [],
  "target": "#some-target",
  "template": Object {
    "itemsList": "
                <ul>
                {{#items}} 
                    <li>{{metadata.name}}</li> 
                {{/items}}
                </ul>
            ",
  },
}
`;

exports[`<ResultComponent /> should render with custom props 2`] = `
preact-render-spy (1 nodes)
-------
<div class="as-result custom-container-class">
  <div class="as-result__itemsList">
    
                    <ul>
                        <li>Tony Stark</li> 
                        <li>Peter Parker</li> 
                    </ul>
                
  </div>
</div>

`;

exports[`<ResultComponent /> should render with default props 1`] = `
Object {
  "children": Array [],
  "classNames": Object {
    "container": "",
  },
  "data": Object {
    "items": Array [
      Object {
        "metadata": Object {
          "img": "https://api.marvel.com/v2/characters/tony-stark",
          "name": "Tony Stark",
        },
      },
      Object {
        "metadata": Object {
          "img": "https://api.marvel.com/v2/characters/peter-parker",
          "name": "Peter Parker",
        },
      },
    ],
    "query": Object {
      "q": "Marvel",
    },
  },
  "exclude": Array [],
  "formatData": [Function],
  "highlightsEnabled": false,
  "itemsPerPage": 10,
  "promote": Array [],
  "target": "#some-target",
  "template": Object {
    "itemsList": "
                <ul>
                {{#items}} 
                    <li>{{metadata.name}}</li> 
                {{/items}}
                </ul>
            ",
  },
}
`;

exports[`<ResultComponent /> should render with default props 2`] = `
preact-render-spy (1 nodes)
-------
<div class="as-result ">
  <div class="as-result__itemsList">
    
                    <ul>
                        <li>Tony Stark</li> 
                        <li>Peter Parker</li> 
                    </ul>
                
  </div>
</div>

`;

exports[`<ResultComponent /> should show placeholder if is set in custom properties and ApisearchUI state is dirty 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-result ">
  <div class="as-result__placeholder">
    This is the results placeholder, search something!
  </div>
</div>

`;

exports[`<ResultComponent /> should update content when passing new data 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-result ">
  <div class="as-result__itemsList">
    
                    <ul>
                        <li>Robert Bruce Banner</li> 
                        <li>Thor Odinson</li> 
                    </ul>
                
  </div>
</div>

`;
